[gd_scene load_steps=7 format=2]

[ext_resource path="res://canvases/hud.gd" type="Script" id=1]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float intensity = 1.0;
uniform float softness = 0.5;

void fragment() {
    // Calculate the distance from the center (0.5, 0.5)
    float distance_from_center = distance(UV, vec2(0.5));
    
    // Create the vignette mask using smoothstep
    // The mask will be 0.0 at the center and 1.0 at the edges
    float vignette = smoothstep(0.5 - softness, 0.5 + softness, distance_from_center * intensity);
    
    // Apply the vignette to the alpha channel of the ColorRect
    COLOR = vec4(0.0, 0.0, 0.0, vignette);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/intensity = 1.0
shader_param/softness = 0.5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.490196, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0745098, 0.129412, 0.415686, 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HB" type="HBoxContainer" parent="M"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0

[node name="HealthBar" type="ProgressBar" parent="M/HB"]
margin_right = 320.0
margin_bottom = 32.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 1 )
max_value = 10.0
value = 6.62

[node name="SanityBar" type="ProgressBar" parent="M/HB"]
margin_left = 920.0
margin_right = 1240.0
margin_bottom = 32.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 0
custom_styles/fg = SubResource( 3 )
value = 3.69

[node name="SanityTimer" type="Timer" parent="."]
wait_time = 0.01
